@startuml Overview
title Overview GameException

skinparam classAttributeIconSize 0
skinparam classFontSize 13
skinparam classFontStyle Bold
skinparam classAttributeFontSize 12

skinparam groupInheritance 2

abstract GameException {
    # errorCode : int
    # errorMessage : string
    --
    + {abstract} what() : string
}

abstract PlayerTurnException {
    # player : Player*
}

abstract PropertyManagmentException {
    # property : Property*
}

abstract SkillTurnException {
    # skillCard : SkillCard*
} 

abstract InvalidEntryInputException {

}


class InsufficientMoneyException {
    - cost : int
    --
    + what() : string
}

class ExistingHotelException {
    --
    + what() : string
}

class InsufficientOwnedColorException {
    --
    + what() : string
}

class PropertyNotMortgagedException {
    --
    + what() : string
}

class InvalidTurnException {
    --
    + what() : string
}

class InvalidDiceNumberException {
    - dice1Number : int
    - dice2Number : int
    --
    + what() : string
}

class InvalidTileException {
    -tileCode : string
    --
    + what() : string
}

abstract InvalidFileException {
    #filePath : string
}

class FileNotFoundException {
    --
    + what() : string
}

class UnreadableFileException {
    --
    + what() : string
}

class FailedToSaveException {
    --
    + what() : string
}

class SkillCardUsedException {
    --
    + what() : string
}

class DiceAlreadyRolledException {
    --
    + what() : string
}


GameException <|-- PlayerTurnException
GameException <|-- InvalidEntryInputException
GameException <|-- InvalidFileException

PlayerTurnException <|-- PropertyManagmentException
PlayerTurnException <|-- SkillTurnException
PlayerTurnException <|-- InvalidTurnException

PropertyManagmentException <|-- InsufficientMoneyException
PropertyManagmentException <|-- InsufficientOwnedColorException
PropertyManagmentException <|-- ExistingHotelException
PropertyManagmentException <|-- PropertyNotMortgagedException

SkillTurnException <|-- SkillCardUsedException
SkillTurnException <|-- DiceAlreadyRolledException

InvalidEntryInputException <|-- InvalidTileException
InvalidEntryInputException <|-- InvalidDiceNumberException

InvalidFileException <|-- FileNotFoundException
InvalidFileException <|-- FailedToSaveException
InvalidFileException <|-- UnreadableFileException